[tool.poetry]
name = "gtfs-pubsub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gtfs_pubsub"}]

[tool.poetry.dependencies]
python = "^3.11"
gtfs-realtime-bindings = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
